syntax = "proto3";

package sum;

option java_multiple_files = true;
option java_package = "com.proto.sum";

message SumRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message SumResponse {
  int32 sum = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

service AdditionService {
  rpc add(SumRequest) returns (SumResponse) {};

  rpc Average(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}